# stm32c0xx-hal

./: Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config.toml
.github/workflows/: ci.yml  clippy.yml
examples/: blinky.rs  blinky_delay.rs  blinky_timer.rs  button.rs  clockout.rs  hello.rs  i2c.rs  rtic.rs  uart.rs  watchdog.rs
src/: crc.rs  exti.rs  gpio.rs  lib.rs  power.rs  prelude.rs  rtc.rs  spi.rs  watchdog.rs
src/analog/: adc.rs  mod.rs
src/gpio/: alt.rs  c0.rs
src/gpio/alt/: c0.rs
src/i2c/: blocking.rs  mod.rs  nonblocking.rs
src/rcc/: clockout.rs  config.rs  enable.rs  mod.rs
src/serial/: config.rs  usart.rs
src/timer/: delay.rs  mod.rs  opm.rs  pins.rs  pwm.rs  qei.rs  stopwatch.rs
