[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32C0 series microcontrollers"
documentation = "https://docs.rs/stm32c0xx-hal"
edition = "2021"
keywords = ["arm", "cortex-m", "stm32c0xx", "hal"]
license = "MIT/Apache-2.0"
name = "stm32c0xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32c0xx-hal"
version = "0.0.0"
rust-version = "1.65"

[package.metadata.docs.rs]
features = ["stm32c031", "rt"]
default-target = "thumbv6m-none-eabi"

[dependencies]
cortex-m = { version = "0.7.7", features=["critical-section-single-core"] }
nb = "1.0.0"
fugit = "0.3.5"

[dependencies.stm32c0]
version = "0.16.0"
features = ["rt"]

[dependencies.bare-metal]
version = "1.0.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.7"

[dependencies.void]
default-features = false
version = "1.0.2"

[dev-dependencies]
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"

[features]
default = ["i2c-blocking"]
device-selected = []
rt = ["stm32c0/rt"]
stm32c011 = ["stm32c0/stm32c011", "device-selected"]
stm32c031 = ["stm32c0/stm32c031", "device-selected"]
stm32c071 = ["stm32c0/stm32c071", "device-selected"]

i2c-blocking = []
i2c-nonblocking = []

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false
opt-level = 2

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
